Fixed mobile adaptive design issues with too big font size

--- a/src/components/Profile/profile.css
+++ b/src/components/Profile/profile.css
@@ -235,6 +235,12 @@
 	}
 
 	.profile__component {
-		padding: 30px;
+		padding: 30px 10px;
+	}
+}
+
+@media (max-width: 420px) {
+	:root {
+		--send-size: 11px
 	}
 }
